--- a/index.html
+++ b/index.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fruit Salad</title>
+    <script defer src="./js/script.js"></script>
 </head>
+
 <body>
 
     <section id="inputSection">
         <form>
-            <label for="fruitInput">Enter a fruit</label> <!-- Labels are important for forms-->
+            <label for="fruitInput">Enter a fruit</label> <!-- Labels are important for forms -->
             <input name="fruit" type="text" id="fruitInput" placeholder="e.g. banana">
             <input type="submit" value="submit">
         </form>
     </section>
 
     <section id="fruitSection">
-        
+
     </section>
 
     <section id="nutritionSection">
