Ready to commit APIs

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <section id="inputSection">
         <form>
             <label for="fruitInput">Enter a fruit</label> <!-- Labels are important for forms -->
-            <input name="fruit" type="text" id="fruitInput" placeholder="e.g. banana">
+            <input name="fruit" type="text" id="fruitInput" placeholder="e.g. banana" required>
             <input type="submit" value="submit">
         </form>
     </section>
 
     <section id="fruitSection">
-
+        <ul></ul>
     </section>
 
     <section id="nutritionSection">
